restrict-impersonating-groups/.chainsaw-test/bad-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: bad-clusterrole
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["impersonate"]
