restrict-impersonating-groups/.chainsaw-test/bad-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: bad-role
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["impersonate"]
