restrict-impersonating-groups/.chainsaw-test/crb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb
subjects:
- kind: ServiceAccount
  namespace: test2
  name: bar
roleRef:
  kind: ClusterRole
  name: bad-clusterrole
  apiGroup: rbac.authorization.k8s.io
