restrict-impersonating-groups/.chainsaw-test/crb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb
subjects:
- kind: ServiceAccount
  namespace: test2
  name: manager
roleRef:
  kind: ClusterRole
  name: good-clusterrole
  apiGroup: rbac.authorization.k8s.io
