restrict-impersonating-groups/.chainsaw-test/good-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: good-clusterrole
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["get"]
