restrict-impersonating-groups/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: good-role
rules:
- apiGroups: ["*"]
  resources: ["groups"]
  verbs: ["get"]
