restrict-impersonating-groups/.chainsaw-test/rb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb01
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: Role
  name: good-role
  apiGroup: rbac.authorization.k8s.io
