restrict-impersonating-groups/restrict-impersonating-groups-clusterroles.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-impersonating-groups-clusterroles
  annotations:
    policies.kyverno.io/title: Check for Subjects like ServiceAccount/User/Group with non compliant ClusterRoles which allow user to impersonate a group.
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: critical
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.32"
    policies.kyverno.io/subject: ClusterRole
    policies.kyverno.io/description: >-
      This policy will check for all the subjects like ServiceAccount/User/Group which are mapped with the ClusterRoles allowing user to impersonate a group.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-impersonating-groups-clusterroles
      match:
        any:
        - resources:
            kinds:
            - ClusterRole
      context:
        - name: clusterrolebinding
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/clusterrolebindings"
            jmesPath: "items[?roleRef.name=='{{ request.object.metadata.name }}']"
      validate:
        message: >- 
           ClusterRoleBinding {{ clusterrolebinding[].metadata.name }} with {{ clusterrolebinding[].subjects[].kind }} {{ clusterrolebinding[].subjects[].name }}
           is using role {{request.object.metadata.name}} which has access to impersonate a group.
        deny:
          conditions:
            any:
              - key: "{{ contains(to_array(request.object.rules[].verbs[]), 'impersonate') && contains(to_array(request.object.rules[].resources[]), 'groups') }}"
                operator: Equals
                value: true
