restrict-impersonating-groups/restrict-impersonating-groups-role.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-impersonating-groups-role
  annotations:
    policies.kyverno.io/title: Check for Subjects like ServiceAccount/User/Group with non compliant Roles which allow user to impersonate a group.
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: critical
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.28"
    policies.kyverno.io/subject: ClusterRoleBinding
    policies.kyverno.io/description: >-
      This policy will check for all the subjects like ServiceAccount/User/Group which are mapped with the Roles allowing user to impersonate a group.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: restrict-impersonating-groups-role
      match:
        any:
        - resources:
            kinds:
            - Role
      context:
        - name: rolebinding
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/namespaces/{{ request.object.metadata.namespace }}/rolebindings"
            jmesPath: "items[?roleRef.name=='{{ request.object.metadata.name }}']"
      validate:
        message: >- 
           RoleBinding {{ rolebinding[].metadata.name }} with {{ rolebinding[].subjects[].kind }} {{ rolebinding[].subjects[].name }}
           is using role {{request.object.metadata.name}} which has access to impersonate a group.
        deny:
          conditions:
            any:
              - key: "{{ contains(to_array(request.object.rules[].verbs[]), 'impersonate') && contains(to_array(request.object.rules[].resources[]), 'groups') }}"
                operator: Equals
                value: true
