restrict-impersonating-groups/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-impersonating-groups
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-impersonating-groups-clusterroles.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-impersonating-groups-clusterroles
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
    - apply:
        file: ../restrict-impersonating-groups-role.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-impersonating-groups-role
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-2.yaml

  - name: step-02
    try:
    - apply:
        file: rb-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-role.yaml
    - apply:
        file: rb-good.yaml
    - apply:
        file: good-role.yaml
    - apply:
        file: crb-bad.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-clusterrole.yaml
    - apply:
        file: crb-good.yaml
    - apply:
        file: good-clusterrole.yaml
